finished the first two parts of the landing page

--- a/index.html
+++ b/index.html
@@ -10,44 +10,48 @@
 <body>
     <div class="nav">
         <div class="header">
-            <header>Header Logo</header>
+            <header>THE BLOCC</header>
         </div>
             <ul class="left-links">
-                <li><a href="#" >header link one</a></li>
-                <li><a href="#" >header link two</a></li>
-                <li><a href="#" >header link three</a></li>
+                <li><a href="https://www.hbo.com/insecure/season-2/7-hella-disrespectful" >Hella Disrespectful </a></li>
+                <li><a href="https://www.hbo.com/insecure/season-3/5-high-like" >High-Like</a></li>
+                <li><a href="https://www.hbo.com/insecure/season-5/8-choices-okay" >Choices, Okay?!</a></li>
             </ul>
         </div>
         <div class="container1">
-            <h2>This website is awesome</h2>
-            <p>This website has some subtext that goes here under the
-                main title.It's a smaller font and the color is lower
-                contrast.
-            </p>
-            <button>Sign up</button>
-            <p>This is a placeholder for an image</p>
+            <div class="info1">
+            <h2>Relax, Relate, Release</h2>
+            <p>
+                "I don't know what you just said, but do you know who does? God.” 
+                —Issa
+             </p>
+            <button type="button">We Got Ya'll</button>
+             </div>
+             <div class="pic1">
+            <img src="./Images/insecure_fest06.jpeg" alt="Image of Insecure word">
+        </div>
          </div>
 
-    <div class="title">Some Random Information</div>
+    <div class="title">The Founders of The BLOCC</div>
     
     <div class="container2">
-        <div class = "pic">
-            <img src=" " alt="idk yet">
-            <div class="text">This is a type of plant. We love this one.</div>
+        <div class = "pic2">
+            <img src="./Images/Issa_pic.jpeg " alt="idk yet">
+            <div class="text">This is the Ceo, has her hands in too many pots. She still gets it right when it counts.</div>
             </div>
-            <div class = "pic">
-            <img src=" " alt="still idk">
-            <div class="text">This is another type of plant. Isn't it nice</div>
+            <div class = "pic2">
+            <img src="./Images/molly_pic.jpeg" alt="still idk">
+            <div class="text">The lawyer of the company, just don't ask her any relationship advice. </div>
             </div>
-            <div class = "pic">
-            <img src="" alt="idk yet">
-            <div class="text">We have so many plants. Yay plants.</div>
+            <div class = "pic2">
+            <img src="./Images/Kelly_pic.jpeg" alt="idk yet">
+            <div class="text">The financial director of the company. She'll have you crying from laughter. </div>
             </div>
-            <div class = "pic">
-            <img src=" " alt="still idk">
-            <div class="text">I'm running out of things to say about plants.</div>
+            <div class = "pic2">
+            <img src="./Images/tiffany_pic.webp " alt="still idk">
+            <div class="text">I have no idea what she does, but she shows up to the office to show off her fit and judge us.</div>
+            </div>
     </div>
-
     <div class="container3">
         <p>Some type of quote idk</p> 
     </div>
