Finished part three , learned about CSS entities to get the dash in front of the quote that was fun.

--- a/index.html
+++ b/index.html
@@ -35,25 +35,27 @@
     <div class="title">The Founders of The BLOCC</div>
     
     <div class="container2">
-        <div class = "pic2">
+            <div class = "pic2">
             <img src="./Images/Issa_pic.jpeg " alt="idk yet">
-            <div class="text">This is the Ceo, has her hands in too many pots. She still gets it right when it counts.</div>
+            <div class="text">This is Issa the Ceo, has her hands in too many pots. She still gets it right when it counts.</div>
             </div>
             <div class = "pic2">
             <img src="./Images/molly_pic.jpeg" alt="still idk">
-            <div class="text">The lawyer of the company, just don't ask her any relationship advice. </div>
+            <div class="text">Molly is the lawyer of the company, just don't ask her any relationship advice. </div>
             </div>
             <div class = "pic2">
             <img src="./Images/Kelly_pic.jpeg" alt="idk yet">
-            <div class="text">The financial director of the company. She'll have you crying from laughter. </div>
+            <div class="text">Kelly is the financial director of the company. She'll have you crying from laughter. </div>
             </div>
             <div class = "pic2">
             <img src="./Images/tiffany_pic.webp " alt="still idk">
-            <div class="text">I have no idea what she does, but she shows up to the office to show off her fit and judge us.</div>
+            <div class="text">I have no idea what Tiffany does, but she shows up to the office to show off her fit and judge us.</div>
             </div>
     </div>
     <div class="container3">
-        <p>Some type of quote idk</p> 
+             <p class="quote"> Showcasing small businesses in Inglewood in order to build and support the community. </p> 
+
+             <p class="quote--author">Issa probably , couldn't find a quote online</p>
     </div>
 
     <div class="container4">
