--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="test">
         <div class="call-to-action"> 
         <h3>Call to action. It's time</h3>
-        <p class="sign-up-text">Blah blah some type of sign up stuff</p>
+        <p class="sign-up-text">Sign up for <strong>The Blocc</strong> newsletter</p>
         </div>
         <button class="button-sign-up" type="button">Sign Up</button>
         </div>
@@ -71,7 +71,10 @@
         
    
     <footer>
-        <div>Copyright stuff idk</div>
+
+        <p>Copyright © The Odin Project/HBO please don't sue me</p>
+        
+
     </footer>
 
 
